src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Sales Process 1</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Process 2</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Progress_Bar__c</fullName>
        <formula>If(TEXT(StageName) == &quot;Prospecting&quot;,  
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Prospecting&quot;) + &quot;Prospecting &quot; 
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Qualification&quot;) + &quot; Qualification&quot;
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Needs Analysis&quot;) + &quot; Needs Analysis&quot;
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Value Proposition&quot;)  + &quot; Value Proposition&quot; 
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Id. Decision Makers&quot;) + &quot; Id. Decision Makers&quot; 
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Perception Analysis&quot;) + &quot; Perception Analysis&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Proposal/Price Quote&quot;) + &quot; Proposal/Price Quote&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Negotiation/Review&quot;) + &quot; Negotiation/Review&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Closed Won&quot;) + &quot; Closed Won&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Closed Lost&quot;)  + &quot; Closed Lost&quot;, 

If(TEXT(StageName) == &quot;Qualification&quot;,  
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Prospecting&quot;) + &quot;Prospecting &quot; 
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Qualification&quot;) + &quot; Qualification&quot;
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Needs Analysis&quot;) + &quot; Needs Analysis&quot;
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Value Proposition&quot;)  + &quot; Value Proposition&quot; 
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Id. Decision Makers&quot;) + &quot; Id. Decision Makers&quot; 
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Perception Analysis&quot;) + &quot; Perception Analysis&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Proposal/Price Quote&quot;) + &quot; Proposal/Price Quote&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Negotiation/Review&quot;) + &quot; Negotiation/Review&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Closed Won&quot;) + &quot; Closed Won&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Closed Lost&quot;)  + &quot; Closed Lost&quot;, 

If(TEXT(StageName) == &quot;Needs Analysis&quot;,  
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Prospecting&quot;) + &quot;Prospecting &quot; 
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Qualification&quot;) + &quot; Qualification&quot;
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Needs Analysis&quot;) + &quot; Needs Analysis&quot;
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Value Proposition&quot;)  + &quot; Value Proposition&quot; 
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Id. Decision Makers&quot;) + &quot; Id. Decision Makers&quot; 
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Perception Analysis&quot;) + &quot; Perception Analysis&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Proposal/Price Quote&quot;) + &quot; Proposal/Price Quote&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Negotiation/Review&quot;) + &quot; Negotiation/Review&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Closed Won&quot;) + &quot; Closed Won&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Closed Lost&quot;)  + &quot; Closed Lost&quot; ,

If(TEXT(StageName) == &quot;Closed Won&quot;,  
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Prospecting&quot;) + &quot;Prospecting &quot; 
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Qualification&quot;) + &quot; Qualification&quot;
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Needs Analysis&quot;) + &quot; Needs Analysis&quot;
+ &apos;   &apos;  + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Value Proposition&quot;)  + &quot; Value Proposition&quot; 
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Id. Decision Makers&quot;) + &quot; Id. Decision Makers&quot; 
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Perception Analysis&quot;) + &quot; Perception Analysis&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Proposal/Price Quote&quot;) + &quot; Proposal/Price Quote&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Negotiation/Review&quot;) + &quot; Negotiation/Review&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Closed Won&quot;) + &quot; Closed Won&quot;
+ &apos;  &apos;   + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Closed Lost&quot;)  + &quot; Closed Lost&quot;, &apos;&apos;)
)))</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Rec_Type_1</fullName>
        <active>true</active>
        <businessProcess>Sales Process 1</businessProcess>
        <label>Rec Type 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rec_Type_2</fullName>
        <active>true</active>
        <businessProcess>Sales Process 2</businessProcess>
        <label>Rec Type 2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Invalid_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>Name = &apos;Invalid Opp&apos;</errorConditionFormula>
        <errorMessage>Invalid Opp is found</errorMessage>
    </validationRules>
</CustomObject>